<resources>
    <string name="app_name">Certificates</string>
    //Botones
    <string name="btnirLoguin">I already have an account</string>
    <string name="btnirRegistro">Register Account</string>
    <string name="btniniciarSesion">Log in</string>
    <string name="btnRegistroUsuario">Register User</string>
    <string name="btnAgregarTitulo">Add Certificates</string>
    <string name="btnlistarTitulos">List Certificates</string>
    <string name="btnBuscarCertificados">Search Certificates</string>
    <string name="btnSubirCertificado">Register certificate</string>
    <string name="btnBorrarCertificado">Delete certificate</string>
    <string name="btnModificarCertificado">Modify certificate</string>
    <string name="btnirHistorico">historical certificates</string>
    <string name="btncerrarSesion">Sign off</string>
    <string name="btnrecuperarPass">Recover password</string>


    //Edit text
    <string name="editextPassword">Password</string>
    <string name="editextEmail">Email</string>
    <string name="editextUserName">Name</string>
    <string name="editTextTituloCertificad">Certified Name</string>
    <string name="editTextEntidadCertificado">Issuing entity</string>
    <string name="editTextHorasCertificado">Certificate Hours</string>
    <string name="editTextCreditoCertificado">Certificate Credits</string>
    <string name="editTextFechaInicio">Start date</string>
    <string name="editTextFechaFin">End date</string>


    //text view
    <string name="textViewBienvenida">Welcome to the application S.A.S certificates</string>
    <string name="textViewAgregaTitulo">Add your certificate</string>
    <string name="textViewCorteBolsa">bag cut</string>
    <string name="textViewCertificadoSelec">Selected Certificate</string>
    <string name="textViewListarTodo">Aggregated Certificate Listings</string>
    <string name="textViewLMostrarHistorico">Historical years presented</string>
    <string name="textViewLlistarHistorico">Certificates presented in the year: %1$s</string>
    <string name="textViewFechaFin">Certificate end date</string>

    //item
    <string name="itemBuscador">Search </string>
    <string name="cursoReg">Curso registrado correctamente</string>
    <string name="NoSePuedeReg">No se puede registrar el curso</string>
    <string name="sesionCerrada">Sesion Cerrada</string>
    <string name="noLoguin">No se puede iniciar la sesion compruebe los datos</string>
    <string name="compleCampos">Debe completar los campos</string>
    <string name="certificado">certificado</string>
    <string name="cursoBorrado">Curso borrado correctamente</string>
    <string name="cursoNoBorrado">Curso no se ha borrado correctamente</string>
    <string name="cursoModificado">Curso modificado correctamente</string>
    <string name="cursoNoModificado">No se pudo modificar el curso</string>
    <string name="emailNoValido">Introduzca un Email Válido para recuperar la contraseña</string>
    <string name="emailEnviadoPass">Se ha enviado un correo electronico para reestablecer su contraseña</string>
    <string name="emailNoEnviadoPass">No se ha podido mandar el correo para restableces si contraseña</string>
    <string name="passLongtud">La logitud del password debe mayor de 6 caracteres</string>
    <string name="completaCampos">Debe completar los campos</string>
    <string name="usuarioRegistrado">Usuario Registado</string>
    <string name="usuarioNoRegistrado">No se ha podido registrar al usuario</string>
    <string name="usuarioNoBd">No se ha podido agregar al usuario a la base de datos</string>


</resources>
