<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/FondoPantalla">

    <EditText
        android:id="@+id/editTexEmail"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="88dp"
        android:hint="@string/editextEmail"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/editextPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTexEmail"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/btnLoguear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:background="@color/btnAcceder"
        android:textColor="@color/btnMain"
        android:onClick="Loguearse"
        android:text="@string/btniniciarSesion"

        app:layout_constraintBottom_toTopOf="@+id/btnirRecuppass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/btnirRecuppass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="260dp"
        android:background="@color/btnAcceder"
        android:textColor="@color/btnMain"
        android:onClick="irRecupPass"
        android:text="He olvidade mi contraseña"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoguear" />

</androidx.constraintlayout.widget.ConstraintLayout>